[tool.poetry]
name = "quickstart-googlesheets"
version = "0.1.0"
description = ""
authors = ["Mario H. Adaniya <mhadaniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^2.0.2"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
